[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stability-ai-api"
version = "0.0.1"
description = "A small API wrapper to interact with the Stability AI API."
readme = "README.rst"
authors = [
  {name = "Flávio De Melo", email = "flavio.eler@gmail.com"}
]
maintainers = [
  {name = "Flávio De Melo", email = "flavio.eler@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  requests
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/femelo/stability-ai-api/issues"
changelog = "https://github.com/femelo/stability-ai-api/blob/main/changelog.md"
homepage = "https://github.com/femelo/stability-ai-api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

